Centralize `sdk_object_to_hash` logic in `DataHelpers` module and update all references for improved reusability and consistency. Add error handling for partial and failed SnapTrade account linking.

--- a/config/locales/views/snaptrade_items/en.yml
+++ b/config/locales/views/snaptrade_items/en.yml
@@ -16,6 +16,8 @@ en:
       success:
         one: "Successfully linked %{count} account."
         other: "Successfully linked %{count} accounts."
+      partial_success: "Linked %{linked} account(s). %{failed} failed to link."
+      link_failed: "Failed to link accounts: %{errors}"
       no_accounts: "No accounts were selected for linking."
     preload_accounts:
       not_configured: "SnapTrade is not configured."
