Expand option activity type support in `activities_processor` and update i18n hint for SnapTrade account loading.

--- a/config/locales/views/snaptrade_items/en.yml
+++ b/config/locales/views/snaptrade_items/en.yml
@@ -45,7 +45,7 @@ en:
       subtitle: "Select which brokerage accounts to link"
       syncing: "Fetching your accounts..."
       loading: "Fetching accounts from SnapTrade..."
-      loading_hint: "This page will auto-refresh while loading."
+      loading_hint: "Click Refresh to check for accounts."
       refresh: "Refresh"
       info_title: "SnapTrade Investment Data"
       info_holdings: "Holdings with current prices and quantities"
