feat: add auto-open functionality for collapsible sections and streamline unlinked account handling
- Introduce `auto-open` Stimulus controller to auto-expand <details> elements based on URL params.
- Update all settings sections and panels to support the new `auto_open_param` for seamless navigation.
- Improve unlinked account logic for Coinbase, SimpleFIN, and SnapTrade, ensuring consistent and optimized handling.
- Refactor sync warnings and badges for better readability and user experience.
- Extend localization for additional menu items, warnings, and setup prompts.

--- a/config/locales/views/coinbase_items/en.yml
+++ b/config/locales/views/coinbase_items/en.yml
@@ -47,6 +47,7 @@ en:
       setup_needed: Wallets ready to import
       setup_description: Select which Coinbase wallets you want to track.
       setup_action: Import Wallets
+      import_wallets_menu: Import Wallets
       more_wallets_available:
         one: "%{count} more wallet available to import"
         other: "%{count} more wallets available to import"
