--- a/config/locales/views/settings/tr.yml
+++ b/config/locales/views/settings/tr.yml
@@ -3,7 +3,7 @@ tr:
   views:
     settings:
       payments:
-        renewal: "Katkınız %{date} tarihinde devam edecek."
+        renewal: "Bir sonraki ödemeniz %{date} tarihinde olacaktır."
   settings:
     payments:
       show:
