--- a/config/locales/views/settings/ca.yml
+++ b/config/locales/views/settings/ca.yml
@@ -3,7 +3,7 @@ ca:
   views:
     settings:
       payments:
-        renewal: "La teva contribució continua el %{date}."
+        renewal: "El teu proper pagament serà el %{date}."
   settings:
     ai_prompts:
       show:
