--- a/config/locales/views/settings/zh-TW.yml
+++ b/config/locales/views/settings/zh-TW.yml
@@ -3,7 +3,7 @@ zh-TW:
   views:
     settings:
       payments:
-        renewal: "您的貢獻將於 %{date} 繼續。"
+        renewal: "您的下次付款日期為 %{date}。"
   settings:
     ai_prompts:
       show:
