--- a/config/locales/views/mercury_items/ru.yml
+++ b/config/locales/views/mercury_items/ru.yml
@@ -140,7 +140,11 @@ ru:
       all_skipped: "Все счета были пропущены. Счета не созданы."
       creation_failed: "Не удалось создать счета: %{error}"
       no_accounts: "Нет счетов для настройки."
-      success: "Успешно создано %{count} счет(ов)."
+      success:
+        one: "Успешно создано %{count} счет."
+        few: "Успешно создано %{count} счета."
+        many: "Успешно создано %{count} счетов."
+        other: "Успешно создано %{count} счета."
     sync:
       success: Синхронизация запущена
     update:
