--- a/config/locales/views/admin/sso_providers/ru.yml
+++ b/config/locales/views/admin/sso_providers/ru.yml
@@ -13,7 +13,7 @@ ru:
         table:
           name: "Название"
           strategy: "Стратегия"
-          status: "Status"
+          status: "Статус"
           issuer: "Издатель (Issuer)"
           actions: "Действия"
           enabled: "Включен"
