Add pluralization for recurring transactions found/cleaned messages

--- a/config/locales/views/recurring_transactions/ru.yml
+++ b/config/locales/views/recurring_transactions/ru.yml
@@ -20,8 +20,16 @@ ru:
       triggers:
         - Завершения импорта CSV (транзакции, сделки, счета и т.д.)
         - Завершения любой синхронизации с провайдером (Plaid, SimpleFIN и т.д.)
-    identified: Найдено %{count} шаблонов повторяющихся транзакций
-    cleaned_up: Очищено %{count} устаревших повторяющихся транзакций
+    identified:
+      one: "Найден %{count} шаблон повторяющихся транзакций"
+      few: "Найдено %{count} шаблона повторяющихся транзакций"
+      many: "Найдено %{count} шаблонов повторяющихся транзакций"
+      other: "Найдено %{count} шаблона повторяющихся транзакций"
+    cleaned_up:
+      one: "Очищен %{count} устаревший шаблон"
+      few: "Очищено %{count} устаревших шаблона"
+      many: "Очищено %{count} устаревших шаблонов"
+      other: "Очищено %{count} устаревших шаблона"
     marked_inactive: Повторяющаяся транзакция помечена как неактивная
     marked_active: Повторяющаяся транзакция помечена как активная
     deleted: Повторяющаяся транзакция удалена
