--- a/config/locales/views/subscriptions/ru.yml
+++ b/config/locales/views/subscriptions/ru.yml
@@ -10,5 +10,9 @@ ru:
         sure: "Sure"
         today: "сегодня"
       redirect_to_stripe: "На следующем этапе вы будете перенаправлены в Stripe, который обрабатывает платежи для нас."
-      trialing: "Ваши данные будут удалены через %{days} дн."
+      trialing:
+        one: "Ваши данные будут удалены через %{count} день"
+        few: "Ваши данные будут удалены через %{count} дня"
+        many: "Ваши данные будут удалены через %{count} дней"
+        other: "Ваши данные будут удалены через %{count} дня"
       trial_over: "Ваш пробный период закончился"
