--- a/config/locales/views/settings/en.yml
+++ b/config/locales/views/settings/en.yml
@@ -36,7 +36,7 @@ en:
         default_period: Default Period
         default_account_order: Default Account Order
         language: Language
-        language_auto: Use browser language
+        language_auto: Browser language
         page_title: Preferences
         theme_dark: Dark
         theme_light: Light
