--- a/config/locales/views/settings/es.yml
+++ b/config/locales/views/settings/es.yml
@@ -35,7 +35,7 @@ es:
         default_period: Periodo Predeterminado
         default_account_order: Orden Predeterminado de Cuentas
         language: Idioma
-        language_auto: Use browser language
+        language_auto: Idioma del navegador
         page_title: Preferencias
         theme_dark: Oscuro
         theme_light: Claro
