feat: Move upcoming transactions in a dedicated tab

--- a/config/locales/views/transactions/en.yml
+++ b/config/locales/views/transactions/en.yml
@@ -95,6 +95,9 @@ en:
       transaction: transaction
       transactions: transactions
       import: Import
+    list:
+      transaction: transaction
+      transactions: transactions
     toggle_recurring_section: Toggle upcoming recurring transactions
     search:
       filters:
