--- a/config/locales/views/recurring_transactions/en.yml
+++ b/config/locales/views/recurring_transactions/en.yml
@@ -5,7 +5,7 @@ en:
     upcoming: Upcoming Recurring Transactions
     projected: Projected
     recurring: Recurring
-    expected_on: Expected on %{date}
+    expected_in: Expected in %{days} days
     day_of_month: Day %{day} of month
     identify_patterns: Identify Patterns
     cleanup_stale: Clean Up Stale
