--- a/config/locales/views/onboardings/ru.yml
+++ b/config/locales/views/onboardings/ru.yml
@@ -25,3 +25,15 @@ ru:
       message: Мы очень рады, что вы с нами. На следующем этапе мы зададим вам несколько вопросов, чтобы заполнить профиль и все настроить.
       setup: Настроить аккаунт
       title: Знакомство с %{product_name}
+    goals:
+      title: Что привело вас сюда?
+      subtitle: Выберите одну или несколько целей использования %{product_name} в качестве инструмента управления финансами.
+      unified_accounts: Видеть все счета в одном месте
+      cashflow: Понимать денежные потоки и расходы
+      budgeting: Управлять финансовыми планами и бюджетом
+      partner: Управлять финансами с партнером
+      investments: Отслеживать инвестиции
+      ai_insights: Понять свои финансы с помощью ИИ
+      optimization: Анализировать и оптимизировать счета
+      reduce_stress: Снизить финансовый стресс или тревогу
+      submit: Далее
