Translate feedback page

--- a/config/locales/views/pages/en.yml
+++ b/config/locales/views/pages/en.yml
@@ -3,6 +3,13 @@ en:
   pages:
     changelog:
       title: What's new
+    feedback:
+      title: Feedback
+      heading: Leave feedback
+      description: Let us know if you have any specific feedback. Feel free to include links to videos or screenshots.
+      feature_request: Write a feature request
+      bug_report: File a bug report
+      discuss: Discuss %{product_name} with others
     privacy:
       title: Privacy Policy
       heading: Privacy Policy
