--- a/config/locales/views/pages/ru.yml
+++ b/config/locales/views/pages/ru.yml
@@ -3,6 +3,13 @@ ru:
   pages:
     changelog:
       title: Что нового
+    feedback:
+      title: Обратная связь
+      heading: Оставить отзыв
+      description: Дайте нам знать, если у вас есть конкретные отзывы. Вы можете прикрепить ссылки на видео или скриншоты.
+      feature_request: Предложить функцию
+      bug_report: Сообщить об ошибке
+      discuss: Обсудить %{product_name} с другими
     privacy:
       title: Политика конфиденциальности
       heading: Политика конфиденциальности
