--- a/config/locales/views/recurring_transactions/en.yml
+++ b/config/locales/views/recurring_transactions/en.yml
@@ -5,7 +5,10 @@ en:
     upcoming: Upcoming Recurring Transactions
     projected: Projected
     recurring: Recurring
-    expected_in: Expected in %{days} days
+    expected_today: "Expected today"
+    expected_in:
+      one: "Expected in %{count} day"
+      other: "Expected in %{count} days"
     day_of_month: Day %{day} of month
     identify_patterns: Identify Patterns
     cleanup_stale: Clean Up Stale
