--- a/config/locales/views/onboardings/ru.yml
+++ b/config/locales/views/onboardings/ru.yml
@@ -49,3 +49,18 @@ ru:
       optimization: Анализировать и оптимизировать счета
       reduce_stress: Снизить финансовый стресс или тревогу
       submit: Далее
+    trial:
+      title: Попробуйте Sure в течение %{days} дней
+      data_deleted: После этого данные будут удалены
+      intro: Начиная с сегодняшнего дня, вы можете ознакомиться с продуктом. Если он вам понравится, вы можете использовать self-host версию или поддержать проект, чтобы продолжить использование здесь.
+      try_button: Попробовать Sure (%{days} дней)
+      continue_button: Продолжить пробный период
+      upgrade_button: Перейти на платный тариф
+      how_things_work: Как это работает
+      today: Сегодня
+      today_desc: Вы получите бесплатный доступ к Sure на %{days} дней на наших серверах AWS.
+      remind_desc: Мы напомним вам о необходимости экспортировать ваши данные.
+      delete_desc: Мы удалим ваши данные — поддержите проект, чтобы продолжить использование Sure здесь!
+      in_days: Через %{count} дней
+    logout:
+      sign_out: Выйти
