--- a/config/locales/models/account/ru.yml
+++ b/config/locales/models/account/ru.yml
@@ -17,5 +17,10 @@ ru:
       account/loan: Займ/Кредит
       account/other_asset: Прочий актив
       account/other_liability: Прочее обязательство
+      account/other: Прочее
       account/property: Недвижимость
       account/vehicle: Транспортное средство
+      account/asset: Активы
+      account/liability: Обязательства
+      account/cash: Наличные
+      account/depository: Наличные
